# qinbot_ros2

./: README.md  port_dev.sh  qinbot_ws.7z  qinbot_ws_20260228.7z
src/ares_description/: CMakeLists.txt  package.xml
src/ares_description/launch/: display.launch.py  gazebo.launch.py  qinbot_dis.launch-new.py  qinbot_dis.launch.py
src/ares_description/map/test/: model.sdf  test
src/ares_description/meshes/: base_link.STL  imu_link.STL  laser_link.STL  wheel_lb_link.STL  wheel_lf_link.STL  wheel_rb_link.STL  wheel_rf_link.STL
src/ares_description/scripts/: rotate_wheel.py
src/ares_description/urdf/: ares_description.csv  ares_description.urdf
src/ares_description/world/: test.world
src/qinbot_cartographer/: CMakeLists.txt  package.xml
src/qinbot_cartographer/config/: qinbot_2d.lua
src/qinbot_cartographer/launch/: cartographer.launch.py
src/qinbot_navigation2/: CMakeLists.txt  package.xml
src/qinbot_navigation2/launch/: navigation2.launch.py
src/qinbot_navigation2/maps/: qinbot_map.pgm  qinbot_map.yaml
src/qinbot_navigation2/param/: qinbot_nav2.yaml
