<?xml version="1.0"?>
<package format="3">
  <name>ares_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for ares_description</p>
    <p>This package contains configuration data, 3D models and launch files
for ares_description robot</p>
  </description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>